petshop finished without the design

--- a/pet_shop/pets/templates/detail.html
+++ b/pet_shop/pets/templates/detail.html
@@ -3,8 +3,8 @@
 {% block title %}Pet Detail{% endblock title %}
 {% block content %}
 <div class="card">
-	{% if pet.img %}
-	<img src="{{pet.img.url}}" alt="picture">
+	{% if pet.image %}
+	<img src="{{pet.image.url}}" alt="picture">
 	{% endif %}
 	<h5 class="card-header">Pet Details</h5>
 	<div class="card-body">
@@ -14,34 +14,13 @@
     <small>{{pet.available}}</small>
 		<div class="row text-center">
 				<div class="col-md-6">
-						<a href="{% url 'update' pet.id %}" class="btn btn-outline-primary btn-block">Update</a>
+						<a href="{% url 'pet-update' pet.id %}" class="btn btn-outline-primary btn-block">Update</a>
 				</div>
 				<div class="col-md-6">
-						<a href="{% url 'delete' pet.id %}" class="btn btn-outline-danger btn-block">Delete</a>
+						<a href="{% url 'pet-delete' pet.id %}" class="btn btn-outline-danger btn-block">Delete</a>
 				</div>
 		</div>
 	</div>
 </div>
 		<hr>
 		{% endblock content %}
-
-
-
-
-
-		<div class="card">
-		  <h5 class="card-header">Restaurant Details</h5>
-		  <div class="card-body">
-		    <h5 class="card-title">{{car.make}}</h5>
-		    <p class="card-text">{{car.model}}</p>
-		    <p class="card-text">{{car.year}}</p>
-		    <div class="row text-center">
-		        <div class="col-md-6">
-		            <a href="{% url 'car-update' car.id %}" class="btn btn-outline-primary btn-block">Update</a>
-		        </div>
-		        <div class="col-md-6">
-		            <a href="{% url 'car-delete' car.id %}" class="btn btn-outline-danger btn-block">Delete</a>
-		        </div>
-		    </div>
-		  </div>
-		</div>
