--- a/pet_shop/pets/templates/update.html
+++ b/pet_shop/pets/templates/update.html
@@ -9,7 +9,7 @@
   <h5 class="card-header">Update: {{pet_obj.name}}</h5>
   <div class="card-body">
     <p class="card-text">
-        <form action="{% url 'update' pet_obj.id %}" method="POST">
+        <form action="{% url 'pet-update' pet_obj.id %}" method="POST">
             {% csrf_token %}
             {{form|crispy}}
             <input type="submit" value="Update" class="btn btn-outline-primary">
